--- a/website/templates/website/footer.html
+++ b/website/templates/website/footer.html
@@ -2,7 +2,7 @@
 {% block footer %}
 <div class="footer">
 	<div>
-		copyright: Alexander Sopov		
+		&copy; Alexander Sopov		
 	</div>
 </div>
 {% endblock %}
