--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -11,7 +11,19 @@ body{
     left: 0px;
     width:100%;
     background-color: black;
-    min-height: 100px;
+    height: 120px;
+}
+
+.logo{
+    overflow: visible;
+    height:100%;
+}
+
+.logo img{
+    height:80px;
+    width:auto;
+    margin-top:20px;
+    margin-left:20px;
 }
 
 
@@ -63,21 +75,15 @@ body{
 
 .projectIngress{
     background-color: rgba(0,5,5,0.65);
-    position:relative;
+    position:absolute;
     left:0px;
-    top:0px;
+    bottom:0px;
     padding-left: 20px;
     padding-right: 20px;
-    padding-top:120px;
     z-index: 100;
     text-align: center;
-    height: 100%;
+    height: 50%;
     color:white;
-}
-
-.projectIngress h1{
-    margin-top:0px;
-    padding-top: 0px;
 }
 
 .footer{
@@ -99,6 +105,9 @@ body{
     .projectThumb{
         width:50%;
     }
+    .logo img{
+        margin-left:40px;
+    }
 }
 
 @media screen and (min-width: 769px){
@@ -107,15 +116,24 @@ body{
     }
 
     .projectIngress{
+        position: relative;
+        top:0px;
+        height: 100%;
         padding-top: 300px;
         animation-name: moveTextDown;
         animation-duration: .15s;
         padding-top:300px;
         background-color: rgba(0,5,5,0.0);
+    }
 
+
+    .projectIngress h1{
+        margin-top:0px;
+        padding-top: 0px;
     }
     
     .projectIngress:hover{
+        cursor:pointer;
         top:0px;
         animation-name: moveText;
         animation-duration: 0.55s;
