--- a/website/templates/website/header.html
+++ b/website/templates/website/header.html
@@ -1,28 +1,29 @@
 
 {% block header %}
+{% load staticfiles %}
 
 
-<div class="header">
-    <div class="logo">
-        <img src="{#% static logoPath %#}">
-    </div>
-    
+	<div class="header">
+	    <div class="logo">
+	        <img src="{% static logoPath %}">
+	    </div>
+	    
 
 
-    <div class="menu">
-	    <ul>
+	    <div class="menu">
+		    <ul>
 
-		    {% for item in menu %}
-		        <li>
-		        	<a href="{% url item.page.title %}"> {{ item.page.title }} </a>
-	        	</li>
-		    {% endfor %}
-		</ul>	    
+			    {% for item in menu %}
+			        <li>
+			        	<a href="{% url item.page.title %}"> {{ item.page.title }} </a>
+		        	</li>
+			    {% endfor %}
+			</ul>	    
 
-    </div>
+	    </div>
 
 
-</div>
+	</div>
 
 
 {% endblock %}
