plenty of features implemented

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -27,7 +27,7 @@
 
 
 {% block lAction %}
-    <a class="actionButton lbutton" href="http://www.google.com">
+    <a class="actionButton lbutton" href="{% url 'website:projects' %}">
             Exit Polls
     </a>
 {% endblock %}
