--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -5,16 +5,16 @@
 
 {% block container %}
     {% for project in projects %}
-    	<div class="projectThumb">
-    		<img src="{% static project.imgUrl %}">
-			<div class ="projectIngress">
-				<h1>
-					{{ project.title }}
-				</h1>
-				<p>
-					{{ project.introduction }}
-				</p>
-			</div>
-    	</div>
+	    	<div class="projectThumb" onclick="window.location='{% url project.page.url %}';">
+	    		<img src="{% static project.imgUrl %}">
+				<div class ="projectIngress">
+					<h1>
+						{{ project.title }}
+					</h1>
+					<p>
+						{{ project.introduction }}
+					</p>
+				</div>
+	    	</div>
     {% endfor %}
 {% endblock %}
