--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -1,5 +1,6 @@
 
 body{
+    height: 100%;
     margin:0px;
     padding: 0px;
     background: white url("images/background.png");
@@ -27,20 +28,50 @@ body{
 }
 
 
-.menu{
-    text-align: right;
-    position: absolute;
+#hamburger{
+    position:absolute;
+    right:3%;
     bottom:10px;
-    right: 50px;
+    height: 60px;
+    width: 50px;
+    cursor: pointer;
 }
 
-.menu li{
+#hamburger svg {
+    width: 50px;
+    fill: white;
+  }
+
+
+nav {
+    width: 300px;
+    height: 100%;
+    background-color:black;
+    position: fixed;
+    z-index: 100;
+    /* This trasform moves the drawer off canvas. */
+    -webkit-transform: translate(-300px, 0);
+    transform: translate(-300px, 0);
+    /* Optionally, we animate the drawer. */
+    transition: transform 0.3s ease;
+}
+nav.open {
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+}
+
+nav li{
     text-decoration: none;
-    float:left;
-    margin:15px;
+    display:block;
+    text-align:center;
+    margin:20px;
+    margin-right:30px;
+    margin-left:10px;
+    padding:0px;
+    list-style-type:none;
 }
 
-.menu a{
+nav a{
     color:white;
     text-decoration: none;
     font-size: 1.5em;
@@ -74,16 +105,25 @@ body{
 
 
 .projectIngress{
-    background-color: rgba(0,5,5,0.65);
+    background-color: rgba(0,5,5,0.80);
     position:absolute;
     left:0px;
     bottom:0px;
     padding-left: 20px;
     padding-right: 20px;
-    z-index: 100;
-    text-align: center;
-    height: 50%;
+    z-index: 99;
+    height: 35%;
     color:white;
+}
+
+.projectIngress h1 {
+    margin:5px;
+    font-size: 1.5em;
+}
+
+.projectIngress p {
+    margin:5px;
+    font-size: 1em;
 }
 
 .footer{
@@ -111,6 +151,23 @@ body{
 }
 
 @media screen and (min-width: 769px){
+    #hamburger{
+        display:none;
+    }
+
+    nav{
+        text-align: right;
+        width: auto;
+        height: auto;
+        position: absolute;
+        right:-250px;
+        bottom:0px;
+    }
+
+    nav li{
+        display: inline;
+        float:left;
+    }
     .projectThumb{
         width: 33.333%;
     }
@@ -123,6 +180,7 @@ body{
         animation-name: moveTextDown;
         animation-duration: .15s;
         padding-top:300px;
+        text-align: center;
         background-color: rgba(0,5,5,0.0);
     }
 
@@ -138,7 +196,7 @@ body{
         animation-name: moveText;
         animation-duration: 0.55s;
         padding-top:120px;
-        background-color: rgba(0,5,5,0.65);
+        background-color: rgba(0,5,5,0.80);
     }
 
 
@@ -179,11 +237,11 @@ body{
     from {padding-top:300px;
     background-color: rgba(0,5,5,0.0);}
     to {padding-top:120px;
-    background-color: rgba(0,5,5,0.65);}
+    background-color: rgba(0,5,5,0.80);}
 }
 @keyframes moveTextDown {
     from {padding-top:150px;
-    background-color: rgba(0,5,5,0.65);}
+    background-color: rgba(0,5,5,0.80);}
     to {padding-top:300px;
     background-color: rgba(0,5,5,0.0);}
 }
