--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -13,12 +13,12 @@
         {% include "website/header.html" %}
         {% block header %}
         {% endblock %}
-        <div class="container">
+
+
+        <div class="container" id="body">
             {% block container %}
 
             {% endblock %}
-            
-
         </div>
 
         {% include "website/footer.html" %}
@@ -26,5 +26,26 @@
 
         {% endblock %}
     </body>
+    <script>
 
+        /*
+        * Open the drawer when the menu ison is clicked.
+        */
+        var hamburger = document.querySelector('#hamburger');
+        var main = document.querySelector('#body');
+        var drawer = document.querySelector('#menu');
+        var header = document.querySelector('.header');
+
+        hamburger.addEventListener('click', function(e) {
+        drawer.classList.toggle('open');
+        e.stopPropagation();
+        });
+        main.addEventListener('click', function() {
+        drawer.classList.remove('open');
+        });
+        header.addEventListener('click', function() {
+        drawer.classList.remove('open');
+        });
+
+    </script>
 </html>
