fixed a broken link

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -32,7 +32,7 @@
     </a>
 {% endblock %}
 {% block rAction %}
-    <a class="actionButton rbutton" href="/polls/create">
+    <a class="actionButton rbutton" href="/polls/create/">
         <div class="">
             Create a poll
         </div>
