--- a/website/templates/website/projectPage.html
+++ b/website/templates/website/projectPage.html
@@ -13,9 +13,7 @@
 					</h1>
 				</div>
 				<div class="entryText">
-					<p>
-						{{ entry.body_text }}
-					</p>
+						{{ entry.body_text|safe}}
 				</div>
 	    	</div>
     {% endfor %}
