--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -15,7 +15,7 @@
         {% endblock %}
 
 
-        <div class="container" id="body">
+        <div class="container" >
             {% block container %}
 
             {% endblock %}
