--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -1,9 +1,9 @@
 
 body{
-    height: 100%;
+    min-height: 100%;
     margin:0px;
     padding: 0px;
-    background: white url("images/background.png");
+    background: white; /* url("images/background.png");*/
 }
 
 .header{
@@ -79,6 +79,7 @@ nav a{
 
 
 .container{
+    min-height:500px;
     width:100%;
     margin-left:auto;
     margin-right:auto;
@@ -196,7 +197,8 @@ nav a{
 
     .entry {
         width:60%;
-        margin:auto;
+        margin-left:auto;
+        margin-right:auto;
     }
 
     nav{
@@ -205,7 +207,7 @@ nav a{
         height: auto;
         position: absolute;
         right:-250px;
-        bottom:0px;
+        bottom:10px;
     }
 
     nav li{
