--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -1,9 +1,20 @@
-
 {% extends "website/base.html" %}
 {% load staticfiles %}
 
 
 {% block container %}
+	    	<div class="entry">
+	    		<img src="{% static entry.imgUrl %}">
+				<div class ="entryHeadline">
+					<h1>
+						{{ entry.headline }}
+					</h1>
+				</div>
+				<div class="entryText">
+						{{ entry.body_text|safe}}
+				</div>
+	    	</div>
+	<!---
 	<h1>
 		{{ headline }}
 	</h1>
@@ -27,4 +38,6 @@
 			</div>
     	</div>
     {% endfor %}
+
+    -->
 {% endblock %}
