--- a/website/templates/website/header.html
+++ b/website/templates/website/header.html
@@ -4,10 +4,11 @@
 
 
 	<div class="header">
-	    <div class="logo">
-	        <img src="{% static logoPath %}">
-	    </div>
-	   
+		<a href="{% url 'website:index' %}">
+		    <div class="logo">
+		        <img src="{% static logoPath %}">
+		    </div>
+	   </a>
 	    <nav id="menu">
 		    <ul>
 
