made changes to css

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         {% load staticfiles %}
         <link rel="stylesheet" type="text/css" href="{% static 'website/style.css' %}" />
         <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400italic,400' rel='stylesheet' type='text/css'>
@@ -32,7 +32,7 @@
         * Open the drawer when the menu ison is clicked.
         */
         var hamburger = document.querySelector('#hamburger');
-        var main = document.querySelector('#body');
+        var main = document.querySelector('body');
         var drawer = document.querySelector('#menu');
         var header = document.querySelector('.header');
 
