--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -89,25 +89,32 @@ nav a{
 
 
 .entry {
-    background-color: white;
-    width:100%;
-    height:auto;
+    width:90%;
+    margin-left:auto;
+    margin-right:auto;/*
+    border: 1px solid rgba(0,5,5,0.80);;*/
+    background-color: rgba(250,250,250,1);;
     display:flex;
     flex-wrap:wrap;
-    padding:10px;
 }
 
-.entry img{
+.entryImg img{
+    width:100%;
+}
+.entryImg{
+    padding:10px;
     width:100%;
     order:2;
 }
 
 .entryHeadline {
+    padding:10px;
     width:100%;
     order:1;
 }
 
 .entryText {
+    padding:10px;
     text-align: justify;
     width: 100%;
     order:3;
@@ -177,14 +184,15 @@ nav a{
     }
 
 
-    .entry img{
-        width:25%;
-        height:25%;
+    .entryImg{
+        width: 50%;
+        width:calc(50% - 20px);
         order:0;
     }
 
     .entryHeadline {
-        width:75%;
+        width: 50%;
+        width:calc(50% - 20px);
     }
 
 }
@@ -197,8 +205,6 @@ nav a{
 
     .entry {
         width:60%;
-        margin-left:auto;
-        margin-right:auto;
     }
 
     nav{
