--- a/website/templates/website/projectPage.html
+++ b/website/templates/website/projectPage.html
@@ -6,15 +6,20 @@
 {% block container %}
     {% for entry in entries %}
 	    	<div class="entry">
-	    		<img src="{% static entry.imgUrl %}">
+	    		
+	    		<div class="entryImg">
+	    			<img src="{% static entry.imgUrl %}">
+	    		</div>
 				<div class ="entryHeadline">
 					<h1>
 						{{ entry.headline }}
 					</h1>
 				</div>
+				
 				<div class="entryText">
 						{{ entry.body_text|safe}}
 				</div>
+
 	    	</div>
     {% endfor %}
 {% endblock %}
