--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -90,9 +90,10 @@ nav a{
 
 .entry {
     width:90%;
-    margin-left:auto;
-    margin-right:auto;/*
-    border: 1px solid rgba(0,5,5,0.80);;*/
+    margin:auto;
+    margin-top:10px;
+    margin-bottom:20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: rgba(250,250,250,1);;
     display:flex;
     flex-wrap:wrap;
@@ -183,7 +184,7 @@ nav a{
         margin-left:40px;
     }
 
-
+/*
     .entryImg{
         width: 50%;
         width:calc(50% - 20px);
@@ -194,7 +195,7 @@ nav a{
         width: 50%;
         width:calc(50% - 20px);
     }
-
+*/
 }
 
 @media screen and (min-width: 769px){
@@ -204,7 +205,7 @@ nav a{
 
 
     .entry {
-        width:60%;
+        width:75%;
     }
 
     nav{
@@ -246,7 +247,7 @@ nav a{
         cursor:pointer;
         top:0px;
         animation-name: moveText;
-        animation-duration: 0.55s;
+        animation-duration: 0.35s;
         padding-top:120px;
         background-color: rgba(0,5,5,0.80);
     }
@@ -269,6 +270,12 @@ nav a{
     }
 }
 
+@media screen and (min-width: 1024px){
+
+    .entry {
+        width:60%;
+    }
+}
 
 @media screen and (min-width: 1920px){
     .container{
