--- a/website/templates/website/blog.html
+++ b/website/templates/website/blog.html
@@ -6,7 +6,9 @@
 {% block container %}
     {% for entry in entries %}
 	    	<div class="entry">
-	    		<img src="{% static entry.imgUrl %}">
+	    		<div class="entryImg">
+	    			<img src="{% static entry.imgUrl %}">
+	    		</div>
 				<div class ="entryHeadline">
 					<h1>
 						{{ entry.headline }}
