--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -20,6 +20,11 @@
 
             {% endblock %}
         </div>
+        {% include "website/emailFooter.html" %}
+
+        {% block email %}
+
+        {% endblock %}
 
         {% include "website/footer.html" %}
         {% block footer %}
