--- a/website/templates/website/footer.html
+++ b/website/templates/website/footer.html
@@ -2,7 +2,7 @@
 {% block footer %}
 <div class="footer">
 	<div>
-		&copy; Alexander Sopov		
+		Swedish Coffee Studios | Virvelvindsgatan 8, 417 02, Gothenburg | <!--&copy;-->Copyright 2016		
 	</div>
 </div>
 {% endblock %}
