--- a/website/templates/website/blog.html
+++ b/website/templates/website/blog.html
@@ -4,19 +4,33 @@
 
 
 {% block container %}
-    {% for entry in entries %}
-	    	<div class="entry">
-	    		<div class="entryImg">
-	    			<img src="{% static entry.imgUrl %}">
-	    		</div>
-				<div class ="entryHeadline">
-					<h1>
-						{{ entry.headline }}
-					</h1>
-				</div>
-				<div class="entryText">
-						{{ entry.body_text|safe}}
-				</div>
-	    	</div>
+    <!--{% for entry in entries %}
+    	<div class="entry">
+    		<div class="entryImg">
+    			<img src="{% static entry.imgUrl %}">
+    		</div>
+			<div class ="entryHeadline">
+				<h1>
+					{{ entry.headline }}
+				</h1>
+			</div>
+			<div class="entryText">
+					{{ entry.body_text|safe}}
+			</div>
+    	</div>
+    {% endfor %}
+-->
+	{% for entry in entries %}
+    	<div class="projectThumb" onclick="window.location='/blog/{{ entry.id }}/';">
+    		<img src="{% static entry.imgUrl %}">
+			<div class ="projectIngress">
+				<h1>
+					{{ entry.headline }}
+				</h1>
+				
+				{{ entry.body_text | safe }}
+				
+			</div>
+    	</div>
     {% endfor %}
 {% endblock %}
