--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -1,9 +1,21 @@
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 
 body{
-    min-height: 100%;
     margin:0px;
     padding: 0px;
-    background: white; /* url("images/background.png");*/
+}
+
+.background{
+    position:fixed;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:100%;
+    background: url("images/office(425).jpg");
 }
 
 .header{
@@ -93,7 +105,7 @@ nav a{
 
 
 .entry {
-    width:90%;
+    width:95%;
     margin:auto;
     margin-top:10px;
     margin-bottom:20px;
@@ -106,8 +118,7 @@ nav a{
 
 .date{
     width:100%;
-    padding:10px;
-    height:30px;
+    padding-left:10px;
     border-bottom: 1px solid black;
 }
 
@@ -177,7 +188,9 @@ nav a{
 
 .emailFooter{
     width:100%;
-    height: 150px;
+    padding-top:20px;
+    text-align: center;
+    height: 200px;
     border-top: 1px solid black;
     color:white;
     background-color: rgba(50,50,50,0.8);
@@ -187,16 +200,14 @@ nav a{
 
 .emailFooter form{
     position:relative;
-    left:calc(50% - 21%);
-    top: calc(50% - 25px);
 }
 
 .emailFooter button{
     font-size: 1.2em;
     width: 10%;
-    height:55px;
+    height:45px;
     margin:0px;
-    margin-left:2%;
+    margin-left:0.5%;
     padding:10px;
 }
 
@@ -228,6 +239,8 @@ nav a{
     margin:auto;
 }
 
+
+
 @media screen and (min-width: 426px){
     .projectThumb{
         width:50%;
@@ -235,23 +248,20 @@ nav a{
     .logo img{
         margin-left:40px;
     }
-
-/*
-    .entryImg{
-        width: 50%;
-        width:calc(50% - 20px);
-        order:0;
+    .background{
+        background: url("images/office(768).jpg");
     }
 
-    .entryHeadline {
-        width: 50%;
-        width:calc(50% - 20px);
+    .entry{
+        width:90%;
     }
-*/
 }
 
 @media screen and (min-width: 769px){
 
+    .background{
+        background: url("images/office(1024).jpg");
+    }
 
     #hamburger{
         display:none;
@@ -287,7 +297,7 @@ nav a{
         height: 100%;
         padding-top: 400px;
         animation-name: moveTextDown;
-        animation-duration: .15s;
+        animation-duration: .50s;
         text-align: center;
         background-color: rgba(0,5,5,0.0);
     }
@@ -302,7 +312,7 @@ nav a{
         cursor:pointer;
         top:0px;
         animation-name: moveText;
-        animation-duration: 0.35s;
+        animation-duration: 0.385s;
         padding-top:200px;
         background-color: rgba(0,5,5,0.80);
     }
@@ -326,7 +336,10 @@ nav a{
 
 }
 
-@media screen and (min-width: 1024px){
+@media screen and (min-width: 1025px){
+    .background{
+        background: url("images/office(1440).jpg");
+    }
 
     .entry {
         width:60%;
@@ -348,10 +361,16 @@ nav a{
         height:calc(110% + 10px);
     }
 }
-
+@media screen and (min-width: 1441px){
+    .background{
+        background: url("images/office(4k).jpg");
+    }
+}
 @media screen and (min-width: 1920px){
     .container{
         width: 1920px;
+        border-left: 4px solid black;
+        border-right: 4px solid black;
     }
 }
 
@@ -428,3 +447,12 @@ nav a{
     }
 }
 
+
+
+/*
+
+.entry{
+    margin-top:5000px;
+}
+
+*/
