--- a/website/templates/website/emailFooter.html
+++ b/website/templates/website/emailFooter.html
@@ -1,6 +1,6 @@
 {% block email %}
 	<div class="emailFooter">
-		<!--<h1>Get in touch</h1-->
+		<h1>Get in touch</h1>
 		<form action="{}" method="post">
 		    {% csrf_token %}
 		    {{ form }}
