--- a/website/templates/website/emailFooter.html
+++ b/website/templates/website/emailFooter.html
@@ -1,7 +1,7 @@
 {% block email %}
 	<div class="emailFooter">
 		<h1>Get in touch</h1>
-		<form action="{}" method="post">
+		<form action="{% url 'website:index' %}" method="post">
 		    {% csrf_token %}
 		    {{ form }}
 		    <button type="submit">Send</button>
