--- a/website/templates/website/emailFooter.html
+++ b/website/templates/website/emailFooter.html
@@ -1,10 +1,10 @@
 {% block email %}
 	<div class="emailFooter">
-		<h1>Get in touch</h1>
+		<h1>Get in Touch</h1>
 		<form action="{% url 'website:index' %}" method="post">
 		    {% csrf_token %}
 		    {{ form }}
-		    <button type="submit">Send</button>
+		    <button type="submit" name="email">Send</button>
 		</form>
 	</div>
 {% endblock %}
