--- a/polls/templates/polls/create.html
+++ b/polls/templates/polls/create.html
@@ -15,7 +15,7 @@
     <form action="{% url 'polls:createPoll' %}" method="post" id="createPoll">
 
         {% csrf_token %}
-
+         <!-- {{ form }}{{ form1 }} -->
 
         Write your question:<br>
         <input type="text" name="question"><br>
@@ -25,6 +25,7 @@
         <br><input type="text" name="choice">
         <br><input type="text" name="choice">
         <br><input type="text" name="choice">
+
     </form>
 {% endblock %}
 {% block rAction %}
