--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -13,9 +13,17 @@ body{
     position:fixed;
     top:0px;
     left:0px;
+    z-index: -9999;
     width:100%;
     height:100%;
     background: url("images/office(425).jpg");
+}
+
+#bufferDiv{
+    height:120px;
+    width:50px;
+    background-color: rgba(0,0,0,0);
+    padding-bottom: 40px;
 }
 
 .header{
@@ -40,6 +48,7 @@ body{
     height:100%;
     width:auto;
 }
+
 
 
 #hamburger{
@@ -93,8 +102,9 @@ nav a{
 
 
 .container{
-    position: relative;
-    top:120px;
+    padding:0px;
+    margin:0px;
+    padding-top:20px;
     min-height:500px;
     width:100%;
     margin-left:auto;
@@ -103,7 +113,43 @@ nav a{
     flex-wrap: wrap;
 }
 
+.blogPlate{
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:20px;
+    width:100%;
+    background-color:rgba(200,200,200,0.8);
+    display:flex;
+    flex-wrap: wrap;
+}
 
+.blogEntry{
+    margin:30px;
+    width:calc(100% - 60px);
+}
+.blogEntryPiece{
+    margin:0px;
+    padding-top:10px;
+    padding-bottom:10px;
+    margin-bottom: 30px;
+    width:100%;
+    background-color: white;
+}
+
+.blogInfo{
+    margin:30px;
+    width:calc(100% - 60px);
+}
+
+#entryThumb {
+    cursor:pointer;
+}
+.blogInfo div{
+    margin:0px;
+    margin-bottom:30px;
+    background-color: white;
+    width:100%;
+}
 .entry {
     width:95%;
     margin:auto;
@@ -194,8 +240,6 @@ nav a{
     border-top: 1px solid black;
     color:white;
     background-color: rgba(50,50,50,0.8);
-    position:relative;
-    top:120px;
 }
 
 .emailFooter form{
@@ -221,8 +265,6 @@ nav a{
 
 
 .footer{
-    position: relative;
-    top: 120px;
     background-color: rgb(30,30,30);
     height:60px;
     width:100%;
@@ -255,6 +297,9 @@ nav a{
     .entry{
         width:90%;
     }
+
+
+
 }
 
 @media screen and (min-width: 769px){
@@ -268,7 +313,7 @@ nav a{
     }
 
     .entry {
-        width:75%;
+        width:80%;
     }
 
     nav{
@@ -334,6 +379,11 @@ nav a{
     }
 
 
+    .blogPlate{
+        width:75%;
+    }
+
+
 }
 
 @media screen and (min-width: 1025px){
@@ -343,6 +393,21 @@ nav a{
 
     .entry {
         width:60%;
+    }
+
+
+    .blogPlate{
+        width:80%;
+    }
+
+    .blogEntry{
+        width:calc(65% - 45px);
+        margin-right:15px;
+    }
+
+    .blogInfo{
+        width:calc(35% - 45px);
+        margin-left:15px;
     }
 
     .projectThumb img{
@@ -366,7 +431,7 @@ nav a{
         background: url("images/office(4k).jpg");
     }
 }
-@media screen and (min-width: 1920px){
+@media screen and (min-width: 1921px){
     .container{
         width: 1920px;
         border-left: 4px solid black;
