--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <div class="background"></div>
+        <div id="bufferDiv"></div>
         {% include "website/header.html" %}
         {% block header %}
         {% endblock %}
