--- a/website/templates/website/blog.html
+++ b/website/templates/website/blog.html
@@ -24,16 +24,16 @@
         <div class="blogEntry" >
         {% for entry in entries %}
             <div class="blogEntryPiece" id="entryThumb" onclick="window.location='/blog/{{ entry.id }}/';">
-                <div class="date">
-                    <p>{{ entry.pub_date }} </p>
+                <div class="entryImg">
+                    <img src="{% static entry.imgUrl %}">
                 </div>
                 <div class ="entryHeadline">
                     <h1>
                         {{ entry.headline }}
                     </h1>
                 </div>
-                <div class="entryImg">
-                    <img src="{% static entry.imgUrl %}">
+                <div class="entryInfo">
+                    <p>{{ entry.pub_date }} </p>
                 </div>
                 <div class="entryText">
                         {{ entry.body_text|safe}}
@@ -50,6 +50,7 @@
                 <br><br><br><br>
             </div>
             <div>
+                <br><br><br><br>
                 <br><br><br><br>
                 <br><br><br><br>
                 <br><br><br><br>
