--- a/website/templates/website/blog.html
+++ b/website/templates/website/blog.html
@@ -1,4 +1,3 @@
-
 {% extends "website/base.html" %}
 {% load staticfiles %}
 
@@ -20,7 +19,7 @@
     	</div>
     {% endfor %}
 -->
-    <div class="blogPlate">
+    <div class="blogPlate plate">
         <div class="blogEntry" >
         {% for entry in entries %}
             {% include "website/entryPiece.html" %}
