--- a/website/templates/website/blogEntry.html
+++ b/website/templates/website/blogEntry.html
@@ -3,7 +3,7 @@
 
 
 {% block container %}
-	<div class="blogPlate">
+	<div class="blogPlate plate">
 		<div class="blogEntry">
 
             {% include "website/entryPiece.html" %}
