--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -112,15 +112,24 @@ nav a{
     display: flex;
     flex-wrap: wrap;
 }
-
-.blogPlate{
-    margin-left:auto;
-    margin-right:auto;
-    margin-bottom:20px;
-    width:100%;
+.plate{
     background-color:rgba(200,200,200,0.8);
     display:flex;
     flex-wrap: wrap;
+    width:100%;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:10px;
+    margin-bottom:20px;
+}
+
+.blogPlate{
+    margin-bottom:20px;
+}
+
+
+.generalPlate{
+    padding:30px;
 }
 
 .blogEntry{
@@ -134,7 +143,9 @@ nav a{
     width:100%;
     background-color: white;
 }
-
+.single{
+    margin-bottom:0px;
+}
 .blogInfo{
     margin:30px;
     width:calc(100% - 60px);
@@ -150,12 +161,6 @@ nav a{
     width:100%;
 }
 .entry {
-    width:95%;
-    margin:auto;
-    margin-top:10px;
-    margin-bottom:20px;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: rgb(250,250,250);
     display:flex;
     flex-wrap:wrap;
@@ -199,12 +204,12 @@ nav a{
 }
 
 
+
 .projectThumb{
     position:relative;
     top:0px;
     left:0px;
     width:100%;
-    height:400px;
     overflow:hidden;
 }
 
@@ -212,7 +217,6 @@ nav a{
     position: absolute;
     top: -80px;
     left: -150px;
-    height: calc(100% + 80px);
 }
 
 
@@ -300,12 +304,6 @@ nav a{
         background: url("images/office(768).jpg");
     }
 
-    .entry{
-        width:90%;
-    }
-
-
-
 }
 
 @media screen and (min-width: 769px){
@@ -316,10 +314,6 @@ nav a{
 
     #hamburger{
         display:none;
-    }
-
-    .entry {
-        width:80%;
     }
 
     nav{
@@ -385,7 +379,7 @@ nav a{
     }
 
 
-    .blogPlate{
+    .plate{
         width:75%;
     }
 
@@ -397,12 +391,8 @@ nav a{
         background: url("images/office(1440).jpg");
     }
 
-    .entry {
-        width:60%;
-    }
 
-
-    .blogPlate{
+    .plate{
         width:80%;
     }
 
@@ -440,8 +430,6 @@ nav a{
 @media screen and (min-width: 1921px){
     .container{
         width: 1920px;
-        border-left: 4px solid black;
-        border-right: 4px solid black;
     }
 }
 
