--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -7,18 +7,21 @@
 	<div class="plate generalPlate">
 		<div class="entry">
 			<div style="width:100%;">
-				<h1 style="text-align: center; font-size: 3em;">Projects</h1><br>
+				<h1 style="text-align: center; font-size: 3em;">Projects</h1>
 			</div>
 		    {% for project in projects %}
-			    	<div class="projectThumb" onclick="window.location='/projects/{{ project.page.id }}/';">
+		    	{% if forloop.first %}
+			    	<div class="projectThumb" id="first" onclick="window.location='/projects/{{ project.page.id }}/';">
+		    	{% elif forloop.last %}
+			    	<div class="projectThumb" id="last" onclick="window.location='/projects/{{ project.page.id }}/';">
+			    {% else %}
+			    	<div class="projectThumb" id="middle" onclick="window.location='/projects/{{ project.page.id }}/';">
+			    {% endif %}
 			    		<img src="{% static project.imgUrl %}">
 						<div class ="projectIngress">
 							<h1>
 								{{ project.title }}
 							</h1>
-							<p>
-								{{ project.introduction }}
-							</p>
 						</div>
 			    	</div>
 		    {% endfor %}
