--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -7,7 +7,7 @@
 	<div class="plate generalPlate">
 		<div class="entry">
 			<div style="width:100%;">
-				<h1 style="text-align: center; font-size: 3em;">Projects</h1>
+				<h1 id="projectH1">Projects</h1>
 			</div>
 		    {% for project in projects %}
 		    	{% if forloop.first %}
