--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -49,8 +49,6 @@ body{
     width:auto;
 }
 
-
-
 #hamburger{
     position:absolute;
     right:3%;
@@ -65,7 +63,6 @@ body{
     fill: rgb(220,220,220);
   }
 
-
 nav {
     width: 100%;
     height: 200px;
@@ -78,6 +75,7 @@ nav {
     /* Optionally, we animate the drawer. */
     transition: transform 0.3s ease;
 }
+
 nav.open {
     -webkit-transform: translate(0, 40px);
     transform: translate(0, 40px);
@@ -100,7 +98,6 @@ nav a{
     font-size: 1.5em;
 }
 
-
 .container{
     padding:0px;
     margin:0px;
@@ -112,6 +109,7 @@ nav a{
     display: flex;
     flex-wrap: wrap;
 }
+
 .plate{
     background-color:rgba(200,200,200,0.8);
     display:flex;
@@ -127,7 +125,6 @@ nav a{
     margin-bottom:20px;
 }
 
-
 .generalPlate{
     padding:30px;
 }
@@ -136,6 +133,7 @@ nav a{
     margin:30px;
     width:calc(100% - 60px);
 }
+
 .blogEntryPiece{
     margin:0px;
     padding:20px;
@@ -143,9 +141,11 @@ nav a{
     width:100%;
     background-color: rgb(240,240,240);
 }
+
 .single{
     margin-bottom:0px;
 }
+
 .blogInfo{
     margin:30px;
     width:calc(100% - 60px);
@@ -154,28 +154,26 @@ nav a{
 #entryThumb {
     cursor:pointer;
 }
+
 .blogInfo div{
     margin:0px;
     margin-bottom:30px;
     background-color: rgb(240,240,240);
     width:100%;
 }
+
 .entry {
     background-color: rgb(240,240,240);
+    padding:20px;
     display:flex;
     flex-wrap:wrap;
     width:100%;
 }
 
-
-
-
-
 .entryImg{
     width:100%;
     order:2;
 }
-
 
 .entryImg img{
     width:100%;
@@ -185,6 +183,7 @@ nav a{
     width:100%;
     order:1;
 }
+
 .entryHeadline h1 {
     margin-top:10px;
     margin-bottom:10px;
@@ -196,7 +195,6 @@ nav a{
     font-size: .85em;
 }
 
-
 .entryText {
     font-size: 1.25em;
     margin-top: 25px;
@@ -205,19 +203,24 @@ nav a{
     order:3;
 }
 
-
+#projectH1{
+    text-align: center;
+    font-size: 2.5em;
+    margin:0px;
+}
 
 .projectThumb{
     width:100%;
-    padding:20px;
+    padding:0px;
+    padding-top:20px;
     margin:0px;
+    cursor:pointer;
 }
 
 .projectThumb img{
     width:100%;
     margin:0px;
 }
-
 
 .projectIngress{
     background-color: rgb(40,40,40);
@@ -265,7 +268,6 @@ nav a{
     font-size: 1.2em;
 }
 
-
 .footer{
     background-color: rgb(40,40,40);
     height:120px;
@@ -282,35 +284,31 @@ nav a{
     margin:auto;
 }
 
-
-
 @media screen and (min-width: 426px){
     .projectThumb{
-        width:calc(50% - 30px);
-        padding:0px;
-        margin-right:10px;
-        margin-left:10px;
+        width:calc(50% - 10px);
     }
 
     #first{
-        margin-left:20px;
+        margin-right:10px;
     }
 
     #middle{
-        margin-right:20px;
+        margin-left:10px;
     }
 
     #last{
-        margin:0px;
-        padding:20px;
         width:100%;
     }
+
     .logo img{
         margin-left:40px;
     }
+
     .background{
         background: url("images/office(768).jpg");
     }
+
     .footer{
         height:100px;
     }
@@ -322,6 +320,7 @@ nav a{
     .emailFooter input{
         width: 50%;
     }
+
 }
 
 @media screen and (min-width: 769px){
@@ -379,20 +378,23 @@ nav a{
     }
 
     .projectThumb{
-        width: calc(33.333% - 27px);
+        width: calc(33.333% - 13.334px);
+        margin-bottom:0px;
+    }
+
+    #first{
+        margin-right:10px;
     }
 
     #middle{
+        margin-left:10px;
         margin-right:10px;
     }
 
     #last{
-        width: calc(33.333% - 27px);
-        padding:0px;
+        width: calc(33.333% - 13.334px);
         margin-left:10px;
-        margin-right:20px;
     }
-
 
     .plate{
         width:80%;
@@ -431,6 +433,7 @@ nav a{
     .footer div{
         top:35%;
     }
+
 }
 @media screen and (min-width: 1441px){
     .background{
@@ -441,16 +444,14 @@ nav a{
     .container{
         width: 1920px;
     }
+
 }
-
-
 
 /*
 *
 *       ANIMATIONS
 *
 */
-
 
 @keyframes moveText {
     from {padding-top:400px;
@@ -519,9 +520,7 @@ nav a{
 
 
 /*
-
 .entry{
     margin-top:5000px;
 }
-
 */
