--- a/website/templates/website/blog.html
+++ b/website/templates/website/blog.html
@@ -1,49 +1,8 @@
-{% extends "website/base.html" %}
+{% extends "website/blogBase.html" %}
 {% load staticfiles %}
 
-
-{% block container %}
-    <!--{% for entry in entries %}
-    	<div class="entry">
-    		<div class="entryImg">
-    			<img src="{% static entry.imgUrl %}">
-    		</div>
-			<div class ="entryHeadline">
-				<h1>
-					{{ entry.headline }}
-				</h1>
-			</div>
-			<div class="entryText">
-					{{ entry.body_text|safe}}
-			</div>
-    	</div>
+{% block entry %}
+    {% for entry in entries %}
+        {% include "website/entryPiece.html" %}
     {% endfor %}
--->
-    <div class="blogPlate plate">
-        <div class="blogEntry" >
-        {% for entry in entries %}
-            {% include "website/entryPiece.html" %}
-        {% endfor %}
-        </div>
-        <div class="blogInfo">
-            <div><!-- THIS IS AUTHOR PAGE AND ARCHIVE - BASICALLY IT*S A SIDEBAR -->
-                <br><br><br><br>
-                <br><br><br><br>
-                <br><br><br><br>
-                <br><br><br><br>
-                <br><br><br><br>
-            </div>
-            <div>
-                <br><br><br><br>
-                <br><br><br><br>
-                <br><br><br><br>
-                <br><br><br><br>
-                <br><br><br><br>
-                <br><br><br><br>
-                <br><br><br><br>
-                <br><br><br><br>
-                <br><br><br><br>
-            </div>
-        </div>
-    </div>
 {% endblock %}
